# C-_Playground

./: 1_variables  2_mathematical_operations  3_type_convertion  CMakeLists.txt  main.cpp
basics/: 1_variable.cpp  2_mathematical_operations.cpp  3_order_operations.cpp  4_writing_output.cpp  5_reading_input.cpp  6_working_with_standard_library.cpp
data_types/: 10_type_conversion.cpp  1_initialize_variable.cpp  2_working_with_numbers.cpp  3_narrowing.cpp  4_random_numbers.cpp  5_formatting_output.cpp  6_data_types_and_limits.cpp  7_working_with_boolean.cpp  8_working_with_strings.cpp  9_working_with_arrays.cpp
decision_making/: 1_comparison_operators.cpp  2_logical_operators.cpp  3_order_of_logical_operators.cpp  4_if_statement.cpp  5_nested_if_statement.cpp  6_conditional_statement.cpp  7_switch_statement.cpp
